Sua lai updateProduct